cmake_minimum_required(VERSION 3.14)
project(leet_code LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(src)

enable_testing()
if(EXISTS "${CMAKE_SOURCE_DIR}/tests")
  add_subdirectory(tests)
else()
  message(STATUS "No tests directory found; skipping tests subdirectory")
endif()
